Fixed music logo layout on mobile

--- a/scss/music.scss
+++ b/scss/music.scss
@@ -37,9 +37,8 @@ p {
 }
 
 .d-logo {
-    max-width: 55px;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    max-width: 80px;
+    margin-top: 5px;
 }
 
 .theme-button {
